create seacrh app for ML

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,14 +3,14 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: yellow;
+  --foreground: rgb(29, 29, 22);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: yellow;
+    --foreground: #290d0d;
   }
 }
 
